--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,3 +11,15 @@ spring:
   liquibase:
     enabled: true
     change-log: classpath:/db/changelog/db.changelog-master.yaml
+
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html      # URL для Swagger UI
+    operationsSorter: method    # Сортировка операций по HTTP-методу
+    tagsSorter: alpha           # Сортировка тегов по алфавиту
+  api-docs:
+      path: /v3/api-docs          # Путь к OpenAPI JSON
+  default-produces-media-type: application/json
+  default-consumes-media-type: application/json
+  override-with-generic-response: true
+  use-fqn-for-spring-controller: false
