--- a/src/main/resources/db/changelog/changes/001-create-tolist-table.yaml
+++ b/src/main/resources/db/changelog/changes/001-create-tolist-table.yaml
@@ -29,26 +29,24 @@ databaseChangeLog:
                   constraints:
                     nullable: true
               - column:
-                  name: makeAt
+                  name: make_at
                   type: timestamp
                   constraints:
                     nullable: true
               - column:
-                  name: createdAt
+                  name: created_at
                   type: timestamp
                   defaultValueComputed: CURRENT_TIMESTAMP
                   constraints:
                     nullable: false
               - column:
-                  name: updatedAt
+                  name: updated_at
                   type: timestamp
                   defaultValueComputed: CURRENT_TIMESTAMP
                   constraints:
                     nullable: false
               - column:
                   name: status
-                  type: int
+                  type: varchar(20)
                   constraints:
                     nullable: false
-        - sql:
-            sql: ALTER TABLE to_lists ADD CONSTRAINT chk_user_status_enum CHECK (status IN (1,2,3,4));
