--- a/build.gradle
+++ b/build.gradle
@@ -26,9 +26,10 @@ repositories {
 dependencies {
     implementation platform("org.springframework.boot:spring-boot-dependencies:3.4.4")
 
-    // Принудительно указываем нужные версии spring-web
     implementation 'org.springframework:spring-web:6.1.5'
     implementation 'org.springframework:spring-webmvc:6.1.5'
+
+    implementation 'org.springframework.boot:spring-boot-starter-security'
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
