--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -2,3 +2,9 @@ databaseChangeLog:
   - include:
       file: db/changelog/changes/001-create-tolist-table.yaml
       labels: main
+  - include:
+      file: db/changelog/changes/002-create-auth-schema.yaml
+      labels: main
+  - include:
+      file: db/changelog/changes/003-create-users-table.yaml
+      labels: main
